# ImagePort

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  README.md  package.json  svelte.config.js  vite.config.js
.github/workflows/: release.yml
docs/: release-checklist.md
docs/superpowers/plans/: 2026-06-03-gallery-first-tauri.md  2026-06-11-gallery-workspace-followup-optimization.md  2026-06-11-gallery-workspace-optimization.md
scripts/: restore-gallery-history.mjs  sync-version.mjs  sync-version.test.mjs
src/: app.css  app.html  test-globals.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: http.rs
src-tauri/src/services/: http_client.rs
src/lib/api/: agent-runner.test.ts  agent-runner.ts  agent-runtime.test.ts  agent-runtime.ts  gallery-runner.test.ts  gallery-runner.ts  http-error.ts  image-request-group.test.ts  image-request-group.ts  openai-compatible.test.ts  openai-compatible.ts  provider-adapter.test.ts  provider-adapter.ts  server-sent-events.test.ts  server-sent-events.ts
src/lib/domain/: agent.test.ts  agent.ts  download.test.ts  download.ts  favorites.test.ts  favorites.ts  full-backup.test.ts  full-backup.ts  gallery-hydration.test.ts  gallery-hydration.ts  lightbox.test.ts  lightbox.ts  settings.test.ts  settings.ts  size.test.ts  size.ts  task-gallery.test.ts  task-gallery.ts  task-lifecycle.test.ts  task-lifecycle.ts  task-state.ts  (+12 more)
src/routes/: +layout.svelte  +page.svelte
static/brand/: logo-preview.html
(+63 files in other folders)
